[package]
name = "Waves"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16.0"
eframe = "0.32.0"
egui_node_graph2 = "0.7.0"
egui_plot = "0.33.0"
num-complex = "0.4.6"
rand = "0.9.2"
ron = "0.10.1"
serde = { version = "1", features = ["derive"] }
symphonia = {version ="0.5.4", features = ["mp3"]}

